--- a/web/build.gradle
+++ b/web/build.gradle
@@ -15,7 +15,17 @@ repositories {
 	}
 }
 
+task copyCore(type:Copy) {
+	from('../core/build/libs') {
+		include '*.jar'
+	}
+	into 'lib/'
+}
+
+compileJava.dependsOn copyCore
+
 dependencies {
+	implementation project(':core')
 	implementation name: 'core-0.0.1-SNAPSHOT'
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
