fixed multi-project integration

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-rootProject.name = 'peerCoin'
+rootProject.name = 'peercoin'
 include 'core'
 include 'web'
 include 'manager'
+include 'integration'
