--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,10 +1,9 @@
 plugins {
     // Apply the java-library plugin to add support for Java Library
-    id 'java-library'
+    id 'java'
 }
 group= 'com.peercoin'
 version= '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
