--- a/web/build.gradle
+++ b/web/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.mockito:mockito-all:1.10.19'
 }
 
 test {
