--- a/web/src/main/resources/application.properties.sample
+++ b/web/src/main/resources/application.properties.sample
@@ -1,9 +1,13 @@
 server.port=8081
-
 rabbit.username=guest
 rabbit.password=guest
 
 rabbit.host=localhost
-
-registry.python.currencies=Bitcoin
+registry.python.currencies=Etherium
 registry.python.methods=Paypal
+
+spring.data.mongodb.database= {{dbname}}
+spring.data.mongodb.host= {{rabbithost}}
+spring.data.mongodb.port= 27017
+spring.data.mongodb.username= {{username}}
+spring.data.mongodb.password= {{password}}
