--- a/web/src/main/resources/application.properties.sample
+++ b/web/src/main/resources/application.properties.sample
@@ -2,6 +2,9 @@ server.port=8081
 rabbit.username=guest
 rabbit.password=guest
 
+user.admin.username=admin
+user.admin.password=password
+
 rabbit.host=localhost
 registry.python.currencies=Etherium,UnitedStatesDollar,AustralianDollar,Franc,Pound,CanadianDollar,Yen,Euro
 registry.python.methods=Paypal,Zelle,GooglePay,Cash
