--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testRuntimeClasspath fileTree('src/test/python') { include '*.py' }
     // https://mvnrepository.com/artifact/org.python/jython
-    compile group: 'org.python', name: 'jython-standalone', version: '2.7.2'
+    implementation 'org.python:jython-standalone:2.7.2'
 }
 
 test {
